# EquityLens

./: .env.example  .gitignore  README.md  da-implementare  prova.py  pyproject.toml
app/: api.py  streamlit_app.py
equitylens/: __init__.py
equitylens/agents/: __init__.py  orchestrator.py
equitylens/analysis/: __init__.py  comparables.py  sentiment.py
equitylens/data/: __init__.py  fetcher.py  preprocessing.py
equitylens/factors/: __init__.py  aggregation.py  anomalies.py
equitylens/reporting/: __init__.py  report.py
tests/: test_aggregation.py
